# llm-samplers

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
docs/: Makefile  README.md  requirements.txt
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  license.rst  samplers.rst  usage.rst
src/llm_samplers/: __init__.py  anti_slop.py  base.py  beam.py  min_p.py  pyproject.toml  qalign.py  temperature.py  top_k.py  top_p.py  xtc.py
src/samplers/: __init__.py  anti_slop.py  base.py  min_p.py  temperature.py  top_k.py  top_p.py  xtc.py
tests/: __init__.py  conftest.py  test_anti_slop.py  test_base.py  test_min_p.py  test_qalign.py  test_temperature.py  test_top_k.py  test_top_p.py  test_xtc.py
